Resources/public/css/style.css
/* ... */
@media only screen and (min-width: 767px) and (max-width: 959px) {
 .jumbotron h1 {
 font-size: 94px;
 margin: 10px 0 15px;
}
.jumbotron h3 {
 font-size: 42px;
 line-height: 1;
}
 .span12 .carouselslider {
 width:724px!important;
}
 .span6 .carouselslider {
 width:352px!important;
}
 .carouselslider ul {
 margin-left:-20px!important;
}
 .carouselslider ul li {
 padding:0 0 0 20px!important;
}
 .span12 .item-6 li {
 width:104px!important;
}
 .span12 .item-5 li {
 width:136px!important;
}
 .span12 .item-4 li {
 width:166px!important;
}
 .span12 .item-3 li {
 width:228px!important;
}
 .span12 .item-2 li {
 width:352px!important;
}
 .span12 .item-1 li {
 width:724px!important;
}
 .span6 .item-6 li {
 width:42px!important;
}
 .span6 .item-5 li {
 width:54px!important;
}
 .span6 .item-4 li {
 width:73px!important;
}
 .span6 .item-3 li {
 width:104px!important;
}
 .span6 .item-2 li {
 width:166px!important;
}
 .span6 .item-1 li {
 width:352px!important;
}
.span12 .item-1 li .item .photo-wrap {
 height: 684px;
 padding: 20px 20px 0;
 width: 684px;
}
.span12 .item-2 li .item .photo-wrap, .span6 .item-1 li .item .photo-wrap {
 height: 312px;
 padding: 20px 20px 0;
 width: 312px;
}
.span12 .item-3 li .item .photo-wrap {
 height: 188px;
 padding: 20px 20px 0;
 width: 188px;
}
.span12 .item-4 li .item .photo-wrap, .span6 .item-2 li .item .photo-wrap {
 height: 126px;
 padding: 20px 20px 0;
 width: 126px;
}
.span12 .item-5 li .item .photo-wrap {
 height: 96px;
 padding: 20px 20px 0;
 width: 96px;
}
.span12 .item-6 li .item .photo-wrap, .span6 .item-3 li .item .photo-wrap {
 height: 64px;
 padding: 20px 20px 0;
 width: 64px;
}
.span6 .item-4 li .item .photo-wrap {
 height: 43px;
 padding: 20px 15px 0;
 width: 43px;
}
.span6 .item-5 li .item .photo-wrap {
 height: 34px;
 padding: 20px 10px 0;
 width: 34px;
}
.span6 .item-6 li .item .photo-wrap {
 height: 22px;
 padding: 20px 10px 0;
 width: 22px;
}
}

/* 767px */
@media (max-width: 767px) {
 body {
 padding: 0 !important;
}
 [class*="span"], .uneditable-input[class*="span"], .row-fluid [class*="span"] {
 padding: 0 10px;
}
.event-items, .news-items {
 margin: 0 10px;
}
}
/* 480px */
@media (max-width: 480px) {
 .jumbotron {
 height: 375px;
 padding-top: 165px;
}
 .jumbotron h1 {
 font-size: 62px;
 margin: 10px 0 15px;
}
.jumbotron h3 {
 font-size: 32px;
 line-height: 1;
}
.hero-unit > h1 {
 font-size: 50px;
 line-height: 1.1;
}
.hero-unit > h2 {
 font-size: 45px;
}
.carouselslider {
 margin: 0 auto;
 width: 400px;
}
.span12 .item-6 li, .span12 .item-5 li, .span12 .item-4 li, .span12 .item-3 li, .span12 .item-2 li, .span12 .item-1 li, .span6 .item-6 li, .span6 .item-5 li, .span6 .item-4 li, .span6 .item-3 li, .span6 .item-2 li, .span6 .item-1 li {
 width: 400px !important;
}
.span12 .item-6 li .item .photo-wrap, .span6 .item-3 li .item .photo-wrap, .span12 .item-5 li .item .photo-wrap, .span6 .item-2 li .item .photo-wrap, .span12 .item-4 li .item .photo-wrap, .span6 .item-1 li .item .photo-wrap, .span12 .item-3 li .item .photo-wrap, .span12 .item-2 li .item .photo-wrap, .span12 .item-1 li .item .photo-wrap {
 height: 300px;
 padding: 20px 50px 0;
 width: 300px;
}
}
 @media only screen and (max-width: 459px) {
.navbar .btn-navbar {
 margin: 18px 0 0 !important;
}
.top-bar.alt .navbar .btn-navbar {
 margin: -25px 0 0 !important;
}
 .jumbotron {
 height: 365px !important;
 padding-top: 120px !important;
}
 .jumbotron h1 {
 margin: 10px 0;
}
 .jumbotron h3 {
 font-size: 28px;
 line-height: 1;
}
.tab-fillspace li a {
 font-size: 13px;
}
.event-title h3 {
 font-size: 18px;
 text-transform: none;
}
.carouselslider {
 margin: 0 auto;
 width: 300px;
}
.span12 .item-6 li, .span12 .item-5 li, .span12 .item-4 li, .span12 .item-3 li, .span12 .item-2 li, .span12 .item-1 li, .span6 .item-6 li, .span6 .item-5 li, .span6 .item-4 li, .span6 .item-3 li, .span6 .item-2 li, .span6 .item-1 li {
 width: 300px !important;
}
.span12 .item-6 li .item .photo-wrap, .span6 .item-3 li .item .photo-wrap, .span12 .item-5 li .item .photo-wrap, .span6 .item-2 li .item .photo-wrap, .span12 .item-4 li .item .photo-wrap, .span6 .item-1 li .item .photo-wrap, .span12 .item-3 li .item .photo-wrap, .span12 .item-2 li .item .photo-wrap, .span12 .item-1 li .item .photo-wrap {
 height: 200px;
 padding: 20px 50px 0;
 width: 200px;
}
}

/* PROFILE */

.l-box {
    padding: 16px;
}

.profile {
    text-align: center;
    background-color: #fff;
    position: relative;

    border-right: 1px solid #DDD;
    border-bottom: 1px solid #DDD;

    /*overflow: hidden;*/

    min-height: 400px;
}

.profile-padding {
    padding: 1rem;
}

.profile-img {
    width: 100%;
}

.profile h1,
.profile h2,
.profile h3,
.profile h4,
.profile h5,
.profile h6 {
    line-height: 1rem;
    margin: 8px 0 4px 0;
}

.p-hr {
    color: none;
    border: none;
    outline: none;
    margin: 32px 0;
}

.profile .p-name {
    line-height: 1.5;
    color: #585858;
}

.profile .p-company,
.profile .p-position {
    font-weight: lighter;
}

.p-description,
.profile .p-company,
.profile .p-position {
    color: #757575;
}

.profile .p-description {
    font-size: 13px;
    line-height: 1.4;
    overflow: auto;
    overflow-y: scroll;
    height: 15em;
}

/*.blur-overlay {

    position: fixed;
    z-index: 50;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;    
    background: pink;
    -moz-box-shadow:    inset 0 0 10px rgba(255,255,255,1);
    -webkit-box-shadow: inset 0 0 10px rgba(255,255,255,1);
    box-shadow:         inset 0 0 10px rgba(255,255,255,1);
}
*/
.profile .p-background-top {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 3em;
}

.p-description-title {
    font-size: 16px;
    color: #e72c00;
}

.profile .p-social {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    font-size: 0;
    text-align: center;
    padding: 16px;
    background: #fff;
    border-top: 1px solid #eee;
}
/* ... */

